# drizzle

./: Cargo.toml
assets/: dr-ron-paul-pieces  handshake-template
btmsg-samples/: bitfield-10bytes-complete  bitfield-10bytes-incomplete  bitfield-10bytes-short
src/: bencode.rs  btmsg.rs  main.rs  torrent.rs
