[package]
name = "drizzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
thiserror = "*"
num-derive = "*"
num-traits = "*"
hex-literal = "*"
itertools = "*"
sha1_smol = "*"  # "rustcrypto" is a bit of a mess and @newpavlov and especially @tarcieri came across as a bit of an asshole about the project naming stuff. See https://github.com/RustCrypto/traits/issues/102 and https://github.com/stainless-steel/md5/pull/2
libc = "*"
nix = {version = "*", features = ["uio"]}
drizzle-bencode = { path = "/home/daniel/CLionProjects/drizzle-bencode", version = "*"}